test/libsolidity/syntaxTests/visibility/interface/function_internal.sol
interface I {
	function f() internal;
}
// ----
// TypeError: Functions in interfaces cannot be internal or private.
